Add page with table(lab4)

--- a/style.css
+++ b/style.css
@@ -38,10 +38,18 @@ body {
         margin-bottom: auto;
     }
 
-    a {
+    a{
         font-size: 120%;
         align-self: center;
         color: #3a3f58;
+        margin-left: 5px;
+        margin-right: 5px;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    a:hover{
+        background-color: #fabf8b;
     }
 
     div.header{
@@ -58,19 +66,13 @@ body {
     }
 
     .header a{
-        font-size: 120%;
-        color: #3a3f58;
         margin-left: 5px;
         margin-right: 5px;
     }
 
-
-
     div.content{
         display:flex;
     }
-
-
 
     div.content-left {
         background-color: #ece6cd;
@@ -213,5 +215,42 @@ body {
         right: 0;
         bottom: 0;
         margin: 0;
+    }
+
+    table, th, td{
+        border: 2px solid #ee6a59;
+        border-collapse: collapse;
+        color: #3a3f58;
+    }
+
+    table{
+        width: 90%;
+        margin: auto;
+    }
+
+    caption{
+        color: #3a3f58;
+        font-weight: bold;
+        font-size: large;
+        margin: 10px 5px 5px 5px;
+    }
+
+    th{
+        background-color: #fabf8b;
+        text-align: left; 
+        padding: 5px 5px 5px 5px;
+    }
+
+    td{
+        text-align: center;
+        padding: 5px 10px 5px 10px;
+    }
+
+    tr:nth-child(even){
+        background-color: #d4ceb1;
+    }
+
+    tr:hover{
+        background-color: #fabf8b;
     }
 }
